# mcl_python_package_template

./: Pipfile  README.md  config.yaml  docker_build_run.bash  entrypoint.bash  main.py  pyproject.toml  setup.py  utils.bash
.github/workflows/: test.yml
examples/: simple_usage.py
mcl_python_package_template/: __main__.py  app.py  config.py
python_package_template/: __init__.py
test/unit/: test_hello.py
tests/: test_config.py  test_greetings.py
