[tool.poetry]
name = "mcl_python_package_template"
version = "0.1.1"
description = "The mcl_python_package_template package"
readme = "README.md"
license = "MIT"
authors = ["Manuel Castillo <manucalop@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.2.2"
pydantic = "^1.9.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
flake8 = "^4.0.1"
PyYAML = "^6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project.urls]
Home = "https://github.com/manucalop/mcl_python_package_template"
