[tool.poetry]
name = "mcl-python-package-template"
version = "0.1.2"
description = ""
authors = ["Manuel Castillo-Lopez <manucalop@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pyaml-env = "^1.2.1"
pydantic = "^1.10.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.urls]
Home = "https://github.com/manucalop/mcl_python_package_template"
