[tool.poetry]
name = "mcl_python_package_template"
version = "0.1.1"
description = "The mcl_python_package_template package"
readme = "README.md"
license = "MIT"
authors = ["Manuel Castillo <manucalop@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pyyaml = "^6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.urls]
Home = "https://github.com/manucalop/mcl_python_package_template"
